k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-java-quarkus
  labels:
    app: my-java-quarkus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-java-quarkus
  template:
    metadata:
      labels:
        app: my-java-quarkus
    spec:
      containers:
        - name: my-java-quarkus
          image: java-quarkus-image:latest
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            limits:
              memory: "256Mi"
              cpu: "150m"
