k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-java-quarkus
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: my-java-quarkus
