k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: my-java-quarkus
  name: my-java-quarkus
spec:
  port:
    targetPort: http-8081
  to:
    kind: Service
    name: my-java-quarkus
    weight: 100
